syntax = "proto3";

option go_package = ".;hash";

import "google/protobuf/timestamp.proto";

service HashService {
  rpc GetCurrentHash (HashRequest) returns (HashResponse) {}
}

message HashRequest {
  // input message doesn't have any fields
}

message HashResponse {
  string hash = 1;
  string generation_time = 2;
}
